// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

import "schema/package.proto";

message Invocation {
    reserved 3;

    // Deprecated, use binary_ref
    string     binary     = 1;
    PackageRef binary_ref = 9;

    repeated string                 args          = 2;
    string                          working_dir   = 4;
    map<string, InvocationSnapshot> snapshots     = 5;
    bool                            no_cache      = 6;
    bool                            requires_keys = 7;
    repeated ValueInjection         inject        = 8;

    message ValueInjection {
        string type = 1;
    }
}

message InvocationSnapshot {
    string from_workspace = 1;
    bool   optional       = 2;
    bool   require_file   = 3;
}

message StartupPlan {
    repeated string     args = 1;
    map<string, string> env  = 2;
}
